kubernetes/api/data-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-api
  namespace: etna
spec:
  selector:
    matchLabels:
      app: data-api
  revisionHistoryLimit: 5
  replicas: 3
  progressDeadlineSeconds: 30
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: data-api
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: data-api
          image: public.ecr.aws/v3w7q3a1/tna-data-api:latest
          imagePullPolicy: Always
          ports:
            - name: api-port
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/v1/data/actuator/health/liveness
              port: api-port
            initialDelaySeconds: 3
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: data-api-service
  namespace: etna
spec:
  type: ClusterIP
  selector:
    app: data-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: api-port
