kubernetes/api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etna-ingress-api
  namespace: etna
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/data
            pathType: Prefix
            backend:
              service:
                name: data-api-service
                port:
                  name: api-port
